crates/plotnik-tests/tests/04-emit/bytecode/binding/alternation_alternative_errors.txt
Q = [
  (function_declaraton)
  (class_declaraton)
] @decl
------------------ DIAGNOSTICS -------------------
error: `function_declaraton` is not a valid node kind
 --> query.ptk:2:4
  |
2 |   (function_declaraton)
  |    ^^^^^^^^^^^^^^^^^^^
  |
help: replace with `function_declaration`
  |
2 |   (function_declaration)
  |                     +

error: `class_declaraton` is not a valid node kind
 --> query.ptk:3:4
  |
3 |   (class_declaraton)
  |    ^^^^^^^^^^^^^^^^
  |
help: replace with `class_declaration`
  |
3 |   (class_declaration)
  |                  +
